@@ -16,7 +16,8 @@ Replace the calendar system with a simpler date system
 Important internal rework to get rid of Observable/Observer and use homemade Publisher/Subscriber instead
 Important internal rework to add a synchronization framework to manage concurrent continuous actions (currently only used for date)
 File menu actions now stop the application before executing its actions
-Addition of a "Very fast" speed radio button (and rename others to "Normal" and "Fast") 
+Addition of a "Very fast" speed radio button (and rename others to "Normal" and "Fast")
+When changing speed, stop the application if running, set the new value, and restart if it was running
 
 
 Bug fixes
